build_files/lib/error/test/lib/twodlist/sources/twodlist.c
/*
** EPITECH PROJECT, 2025
** 2list - twodlist.c
** File description:
** <description>
*/

#include "../includes/twodlist.h"

void twodlist_exist(void)
{
}
